--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="refresh"
-            content="0; url=https://hoangan2912.github.io/chuoithucannhanh/">
+            content="0; url=https://hoangan2912.github.io/chuoithucannhanh/index.php">
         <title>Liên kết</title>
     </head>
     <body>
