--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="refresh"
-            content="0; url=https://hoangan2912.github.io/chuoithucannhanh/index.php">
+            content="0; url=https://hoangan2912.github.io/chuoithucannhanh/">
         <title>Liên kết</title>
     </head>
     <body>
-        sadask
+       <?php
+    error_reporting(1);
+    session_start();
+    require("layout/header.php");
+    if(isset($_GET["page"]))
+        $page=$_GET["page"];
+    else
+        $page='trangchu';
+    
+    if(isset($_GET["cate"]))
+        $cate=$_GET["cate"];
+    if(file_exists("views/".$page."/index.php"))
+        include("views/".$page."/index.php");
+    else
+    include("views/404/index.php");
+?>
     </body>
 </html>
