--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8" />
-        <meta http-equiv="refresh"
-            content="0; url=https://hoangan2912.github.io/chuoithucannhanh/">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Liên kết</title>
     </head>
     <body>
